# RAG

./: .env.example  .gitignore  README.md  README_EN.md  README_UA.md  docker-compose.yml  pyproject.toml
config/: projects.yaml
scripts/: rag-clear-all.sh  rag-clear-project.sh  rag-down.sh  rag-index-all.sh  rag-index-project.sh  rag-restart.sh  rag-status.sh  rag-test.sh  rag-up.sh  rag-warmup-reranker.sh  rag-watch.sh
src/local_dev_rag/: chunking.py  clear_project.py  embeddings.py  indexer.py  qdrant_admin.py  server.py  settings.py  watcher.py
tests/: conftest.py  test_embeddings.py  test_mcp_tools.py  test_payload_quality.py  test_qdrant_health.py  test_search.py
